For HW5: Phonebook

--- a/jsday5.html
+++ b/jsday5.html
@@ -6,6 +6,7 @@
     <title>HW 5: Phonebook</title>
     <!-- added quick styling -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- for node styling-->
     <style>
       p {
         font-weight: bold;
